--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>TemperatureConverter</mainClass>  <!-- Correct Main class -->
+                                    <mainClass>Main</mainClass>  <!-- Correct Main class -->
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -85,7 +85,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>TemperatureConverter</mainClass> <!-- Correct Main class -->
+                    <mainClass>Main</mainClass> <!-- Correct Main class -->
 
                 </configuration>
             </plugin>
