--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </dependencies>
 
     <build>
-        <finalName>TemperatureConverter</finalName>
+        <finalName>app</finalName>
         <plugins>
 
             <!-- Compiler plugin -->
@@ -71,7 +71,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Main</mainClass>  <!-- Correct Main class -->
+                                    <mainClass>TemperatureApp</mainClass>  <!-- Correct Main class -->
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -85,8 +85,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Main</mainClass> <!-- Correct Main class -->
-
+                    <mainClass>TemperatureApp</mainClass> <!-- Correct Main class -->
                 </configuration>
             </plugin>
 
