--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     </dependencies>
 
     <build>
-        <finalName>temperature-converter</finalName>
+        <finalName>app</finalName>
         <plugins>
 
             <!-- Compiler plugin -->
@@ -76,11 +76,16 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <!-- Add configurations for shade -->
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>shaded</shadedClassifierName>
+
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>TemperatureApp</mainClass>  <!-- Correct Main class -->
                                 </transformer>
                             </transformers>
+
                         </configuration>
                     </execution>
                 </executions>
