--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,10 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <!-- Add configurations for shade -->
+                            <!-- Add configurations for shade
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>shaded</shadedClassifierName>
+                            -->
 
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
