--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Database Connection Details
-DB_URL="jdbc:mysql://localhost:3306/"database_name"
+DB_URL="jdbc:mysql://localhost:3306/"temperatureconverter_mariadb"
 DB_USER="username"
 DB_PASSWORD="password"
